Dealers API, get all dealers
fix
